# xanada-testing-task

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/skills/plan-task/: SKILL.md
.claude/skills/plan-task/evals/: evals.json
.claude/skills/skill-allure-pytest/: SKILL.md
.claude/skills/skill-write-api-test-cases/: SKILL.md
docs/product/: 01-idea-brief.md
docs/product/adr/: ADR-001-feature-based-architecture.md  ADR-002-httpx-api-client.md  ADR-003-parallel-execution-strategy.md  ADR-004-cross-process-rate-limiter.md
docs/product/architecture/: architecture-design.md
docs/product/prd/: PRD-001-authentication.md
docs/product/test-design/: TD-001-authentication.md
src/fixtures/: http_client.py
src/infra/: config.py  rate_limiter.py
src/infra/api/: http_client.py
src/utils/: data_generators.py
test-cases/api/authentication/: login-automation-decisions.md  login.md
tests/authentication/: test_login.py
tests/authentication/behavior/: test_login.py  test_login_empty_credentials.py  test_login_injection_payloads.py  test_login_invalid_json.py  test_login_long_credentials.py  test_login_missing_fields.py  test_login_nonexistent_user.py  test_login_repeated.py  test_login_unicode_credentials.py  test_login_whitespace_padded.py  test_login_wrong_content_type.py  test_login_wrong_field_types.py  test_login_wrong_http_methods.py  test_login_wrong_password.py
tests/authentication/contract/: test_login_response.py
tests/authentication/integration/: test_login.py  test_login_session_cookie.py  test_login_wrong_http_methods.py
(+15 files in other folders)
